# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
	# Cli
	"crates/rymx",
]

[workspace.dependencies]
smol_str = "0.2"
stringx = "0.1"
thiserror = "1"

# smallest binary without compromising on speed
[profile.dist]
inherits = "release"
lto = "fat"

[profile.dev.package]
smol_str.opt-level = 3
