# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [ "crates/interpolate",
	# Cli
	"crates/rymx",
]
resolver = "2"

[workspace.dependencies]
# smol_str = "0.2"
stringx = "0.1"
thiserror = "1"

# TODO is this really the fastest and smallest profile?
# smallest binary without compromising on speed
[profile.dist]
inherits = "release"
lto = "fat"

[profile.dev.package]
# smol_str.opt-level = 3
insta.opt-level = 3
similar.opt-level = 3
