[package]
name = "rym_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky = { git = "https://github.com/zesterer/chumsky", rev = "6d7e992df6d344ec94d7407a913d952526022105", features = [
	"label",
] }
rym_lexer = { workspace = true }

[dev-dependencies]
insta = "1.26"
indoc = "2.0.0"

# smallest binary without compromising on speed
[profile.tiny]
inherits = "release"
lto = "fat"
