[package]
name = "rym_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rym_ast = { path = "../rym_ast" }
rym_lexer = { path = "../rym_lexer" }

[dependencies.chumsky]
git = "https://github.com/zesterer/chumsky"
rev = "4145fcf5bf1323d1accae5d7ba50ff9b799dbe43"
features = ["label"]

[dev-dependencies]
insta = "1.26"
indoc = "2.0.0"

# smallest binary without compromising on speed
[profile.tiny]
inherits = "release"
lto = "fat"
