[package]
name = "rym_parser"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rym_ast.workspace = true
rym_lexer.workspace = true

[dependencies.chumsky]
git = "https://github.com/zesterer/chumsky"
rev = "f664d7d7f36205bca58842233431927c14be69c0"
features = ["label"]

[dev-dependencies]
insta = "1.29"
indoc = "2.0"
