[package]
name = "rymx"
version = "0.0.3"
edition = "2021"
default-run = "rymx"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chumsky = { git = "https://github.com/zesterer/chumsky", rev = "c935ce5916f1395e36b6fc04a3a021911448e587", features = [
	"label",
] }
clap = { version = "4.4", features = ["cargo"] }
insta = { version = "1.34", features = ["glob"] }
logos = "0.13.0"
owo-colors = "3.5"
rustyline = "12"
