[package]
name = "rymx"
version = "0.0.3"
edition = "2021"
default-run = "rymx"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
ariadne = "0.3.0"
bumpalo = { version = "3.14.0", features = ["collections"] }
chumsky = { git = "https://github.com/zesterer/chumsky", rev = "c935ce5916f1395e36b6fc04a3a021911448e587", features = [
	"label",
] }
clap = { version = "4.4", features = ["cargo"] }
insta = { version = "1.34", features = ["glob"] }
itertools = "0.12.0"
lasso = "0.7.2"
logos = "0.13.0"
owo-colors = "3.5"
rustyline = "13"
strip-ansi-escapes = "0.2.0"
