[package]
name = "rymx"
version = "0.0.3"
edition = "2021"
default-run = "rymx"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky = { git = "https://github.com/zesterer/chumsky", rev = "e045b140497bd07fecbe13ae1ad22aa252678de3", features = [
	"pratt",
	"label",
] }
anyhow = "1.0"
ariadne = "0.3"
bumpalo = { version = "3.14.0", features = ["collections"] }
clap = { version = "4.4", features = ["cargo"] }
insta = { version = "1.34", features = ["glob"] }
itertools = "0.12.0"
lasso = "0.7.2"
logos = "0.13.0"
owo-colors = "4.0"
rustyline = "13"
strip-ansi-escapes = "0.2.0"
