[package]
name = "tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast = { path = "../ast" }
lex = { path = "../lex" }
parse = { path = "../parse" }
tree_walk = { path = "../tree_walk" }
macros = { path = "../macros" }
