[package]
name = "tests"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "gen"
path = "./gen/main.rs"

[dependencies]
ast = { path = "../ast" }
lex = { path = "../lex" }
parse = { path = "../parse" }
tree_walk = { path = "../tree_walk" }
